objects/ssot__ContentDocumentVersion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ChecksumText__c</fullName>
        <label>Checksum</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentDocumentId__c</fullName>
        <label>ContentDocument</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentDocumentPublishStatus__c</fullName>
        <label>Content Document Publish Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentSizeNumber__c</fullName>
        <label>Content Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ContentUrl__c</fullName>
        <label>Content URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FileExtensionName__c</fullName>
        <label>File Extension</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FileType__c</fullName>
        <label>File Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FirstPublishLocationId__c</fullName>
        <label>First Publish Location</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Content Document Version Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsLatest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Latest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>OwnerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VersionDataText__c</fullName>
        <label>VersionData</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VersionDataUrl__c</fullName>
        <label>VersionDataUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VersionNumber__c</fullName>
        <label>VersionNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1724325734623_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContentDocumentVersion_ContentDocume_rel</label>
        <referenceTo>ssot__ContentDocument__dlm</referenceTo>
        <relationshipLabel>ContentDocumentVersion_ContentDocume_rel</relationshipLabel>
        <relationshipName>rel_1724325734623_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1724325767747_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContentDocumentVersion_LastModifiedB_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ContentDocumentVersion_LastModifiedB_rel</relationshipLabel>
        <relationshipName>rel_1724325767747_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1724325769767_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContentDocumentVersion_CreatedById_m_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ContentDocumentVersion_CreatedById_m_rel</relationshipLabel>
        <relationshipName>rel_1724325769767_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>